--- a/404.html
+++ b/404.html
@@ -2,6 +2,8 @@
 <html>
 	<header>
 		<title>AperLambda - 404</title>
+		<link rel="shortcut icon" href="https://aperlambda.github.io/aperlambda.png" />
+		<meta charset="UTF-8" />
 	</header>
 	<body>
 		<p>404 not found!</p>
