--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 	<header>
 		<title>AperLambda</title>
+		<meta charset="UTF-8">
+		<link ref="shortcut icon" href="aperlambda.ico" type="image/x-icon" />
 	</header>
 	<body>
 		<p>Hello, this is the website of AperLambda.</p>
