--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 	<body>
 		<p>Hello, this is the website of AperLambda.</p>
 		<p>GitHub: <a href="https://github.com/AperLambda">AperLambda</a></p>
+		<br />
+		<p>Projects:</p>
+		<ul>
+			<li>λcommon</li>
+			<li>kimiko</li>
+			<li>IonicEngine</li>
+		</ul>
 	</body>
 </html>
