:floppy_disk: λjcommon v1.4.10

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-	<header>
+	<head>
 		<title>AperLambda</title>
 		<meta charset="UTF-8">
 		<link ref="shortcut icon" href="aperlambda.ico" type="image/x-icon" />
-	</header>
+	</head>
 	<body>
 		<p>Hello, this is the website of AperLambda.</p>
 		<p>GitHub: <a href="https://github.com/AperLambda">AperLambda</a></p>
