--- a/404.html
+++ b/404.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-	<header>
+	<head>
 		<title>AperLambda - 404</title>
 		<link rel="shortcut icon" href="https://aperlambda.github.io/aperlambda.png" />
 		<meta charset="UTF-8" />
-	</header>
+	</head>
 	<body>
 		<p>404 not found!</p>
 		<br />
