--- a/index.html
+++ b/index.html
@@ -3,21 +3,117 @@
 	<head>
 		<title>AperLambda</title>
 		<meta charset="UTF-8">
-		<link ref="shortcut icon" href="aperlambda.ico" type="image/x-icon" />
+		<link ref="shortcut icon" rel="icon" href="aperlambda.ico" type="image/x-icon" />
+
+		<!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"  media="screen,projection" />
+		<link type="text/css" rel="stylesheet" href="aperlambda.css" />
+		<link type="text/css" rel="stylesheet" href="css/aperlambda_social_media.css" />
+
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	</head>
-	<body>
-		<p>Hello, this is the website of AperLambda.</p>
-		<p>GitHub: <a href="https://github.com/AperLambda">AperLambda</a></p>
-		<br />
-		<p>Projects:</p>
-		<ul>
-			<li>λcommon</li>
-			<li>kimiko</li>
-			<li>mandarin</li>
-			<li>IonicEngine</li>
-		</ul>
-		<footer>
-			<p>OwO</p>
+	<body class="blue-grey darken-4">
+		<header>
+		  <nav class="blue-grey darken-3">
+				<div class="nav-wrapper">
+					<div class="brand-logo" style="display: flex;align-items:center;">
+						<img class="circle responsive-img" style="max-height: 64px !important; max-width: 32px; padding: 15px 0 !important; margin-left: 5px;" src="aperlambda.png" />
+						<a href="#!" style="margin-left: 5px;">AperLambda</a>
+					</div>
+		    	<a href="#" data-target="mobile-head-navbar" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+		    	<ul class="right hide-on-med-and-down">
+						<li><a href="https://github.com/AperLambda/lambdacommon.git">&lambda;common</a></li>
+						<li><a href="https://github.com/AperLambda/ionicengine.git">IonicEngine</a></li>
+						<li><a href="https://github.com/AperLambda/kimiko.git">kimiko</a></li>
+		    	</ul>
+				</div>
+		  </nav>
+
+		  <ul class="sidenav" id="mobile-head-navbar">
+				<li><a href="https://github.com/AperLambda/lambdacommon.git">&lambda;common</a></li>
+				<li><a href="https://github.com/AperLambda/ionicengine.git">IonicEngine</a></li>
+				<li><a href="https://github.com/AperLambda/kimiko.git">kimiko</a></li>
+		  </ul>
+		</header>
+
+		<div class="section no-pad-bot" id="index-banner">
+			<div class="container">
+				<br />
+				<br />
+				<h1 class="header center blue-grey-text text-lighten-4 brand-title">AperLambda</h1>
+				<div class="row center">
+					<h5 class="header col s12 light white-text">A development team which is targetted to libraries and games.</h5>
+				</div>
+			</div>
+		</div>
+
+		<div class="container">
+			<div class="section">
+  			<!--   Icon Section   -->
+      	<div class="row">
+        	<div class="col s12 m4">
+          	<div class="icon-block">
+            	<h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
+            	<h5 class="center white-text">Team</h5>
+
+            	<p class="light white-text">We're currently a very little team (like 2 people with only one who work) but if you want to join us, we will welcome you!</p>
+          	</div>
+        	</div>
+
+        	<div class="col s12 m4">
+          	<div class="icon-block">
+            	<h2 class="center light-blue-text"><i class="material-icons">games</i></h2>
+            	<h5 class="center white-text">Game development</h5>
+
+            	<p class="light white-text">We are developing games here, at AperLambda. Our current project is nova_res.</p>
+          	</div>
+        	</div>
+
+        	<div class="col s12 m4">
+          	<div class="icon-block">
+            	<h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
+            	<h5 class="center white-text">Libraries development</h5>
+
+            	<p class="light white-text">
+								We create and provide libraries to make development more easier and fun! Why breaking your head on complicated code when you can simplify it?
+								We develop C++ and Java libraries like <a href="https://github.com/AperLambda/lambdacommon.git">&lambda;common</a>, <a href="https://github.com/AperLambda/ionicengine.git">IonicEngine</a>, <a href="https://github.com/AperLambda/kimiko.git">kimiko</a> and more!
+							</p>
+          	</div>
+        	</div>
+      	</div>
+    	</div>
+			<br />
+			<br />
+		</div>
+		<footer class="page-footer blue-grey darken-2">
+			<div class="container">
+				<div class="row">
+					<div class="col l6 s12">
+						<h5 class="white-text">Contact:</h5>
+						<ul>
+							<li><a href="https://discord.gg/zBsgGCv" class="white-text"><i class="fab fa-discord aperlambda-forgeground-discord"></i> Discord Server</a></li>
+							<li><a href="https://twitter.com/AperLambda" class="white-text"><i class="fab fa-twitter aperlambda-foreground-twitter"></i> @AperLambda</a></li>
+							<li><a href="https://github.com/AperLambda" class="white-text"><i class="fab fa-github aperlambda-foreground-github"></i> AperLambda</a></li>
+							<li><a href="mailto:aperlambda@gmail.com" class="white-text"><i class="fas fa-envelope"></i> aperlambda&commat;gmail.com</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="footer-copyright">
+				<div class="container">
+      		Copyright © 2018 AperLambda <aperlambda@gmail.com>
+      	</div>
+			</div>
 		</footer>
+		<!--JavaScript at end of body for optimized loading-->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+		<script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js" integrity="sha384-kW+oWsYx3YpxvjtZjFXqazFpA7UP/MbiY4jvs+RWZo2+N94PFZ36T6TFkc9O3qoB" crossorigin="anonymous"></script>
+		<script>M.AutoInit();</script>
 	</body>
 </html>
