Added lambdacommon page.

--- a/index.html
+++ b/index.html
@@ -20,25 +20,39 @@
 	</head>
 	<body class="blue-grey darken-4">
 		<header>
+			<ul id="libraries_dropdown" class="dropdown-content">
+				<li><span>C++</span></li>
+				<li class="divider"></li>
+				<li><a href="/libraries/lambdacommon">&lambda;common</a></li>
+				<li><a href="/libraries/ionicengine">IonicEngine</a></li>
+				<li class="divider"></li>
+				<li><span>Java</span></li>
+				<li class="divider"></li>
+				<li><a href="/libraries/kimiko">kimiko</a></li>
+			</ul>
+
 		  <nav class="blue-grey darken-3">
 				<div class="nav-wrapper">
 					<div class="brand-logo" style="display: flex;align-items:center;">
 						<img class="circle responsive-img" style="max-height: 64px !important; max-width: 32px; padding: 15px 0 !important; margin-left: 5px;" src="aperlambda.png" />
-						<a href="#!" style="margin-left: 5px;">AperLambda</a>
+						<a href="#!" class="brand-title" style="margin-left: 5px;">AperLambda</a>
 					</div>
 		    	<a href="#" data-target="mobile-head-navbar" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 		    	<ul class="right hide-on-med-and-down">
-						<li><a href="https://github.com/AperLambda/lambdacommon.git">&lambda;common</a></li>
-						<li><a href="https://github.com/AperLambda/ionicengine.git">IonicEngine</a></li>
-						<li><a href="https://github.com/AperLambda/kimiko.git">kimiko</a></li>
+						<li><a class="dropdown-trigger" href="#!" data-target="libraries_dropdown">Libraries<i class="material-icons right">arrow_drop_down</i></a></li>
 		    	</ul>
 				</div>
 		  </nav>
 
 		  <ul class="sidenav" id="mobile-head-navbar">
-				<li><a href="https://github.com/AperLambda/lambdacommon.git">&lambda;common</a></li>
-				<li><a href="https://github.com/AperLambda/ionicengine.git">IonicEngine</a></li>
-				<li><a href="https://github.com/AperLambda/kimiko.git">kimiko</a></li>
+				<li><span style="margin-left: 2px;">Libraries</span></li>
+				<li><span style="margin-left: 8px;">C++</span></li>
+				<li class="divider"></li>
+				<li><a href="/libraries/lambdacommon">&lambda;common</a></li>
+				<li><a href="/libraries/ionicengine">IonicEngine</a></li>
+				<li><span style="margin-left: 8px;">Java</span></li>
+				<li class="divider"></li>
+				<li><a href="/libraries/kimiko">kimiko</a></li>
 		  </ul>
 		</header>
 
@@ -59,30 +73,30 @@
       	<div class="row">
         	<div class="col s12 m4">
           	<div class="icon-block">
-            	<h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
+            	<h2 class="center light-blue-text"><i class="material-icons medium">group</i></h2>
             	<h5 class="center white-text">Team</h5>
 
-            	<p class="light white-text">We're currently a very little team (like 2 people with only one who work) but if you want to join us, we will welcome you!</p>
+            	<p class="light white-text">We're currently a very little team (like 2 people with only one person who works). If you want to join us, we will welcome you!</p>
           	</div>
         	</div>
 
         	<div class="col s12 m4">
           	<div class="icon-block">
-            	<h2 class="center light-blue-text"><i class="material-icons">games</i></h2>
+            	<h2 class="center light-blue-text"><i class="material-icons medium">games</i></h2>
             	<h5 class="center white-text">Game development</h5>
 
-            	<p class="light white-text">We are developing games here, at AperLambda. Our current project is nova_res.</p>
+            	<p class="light white-text">We are developing 2D and 3D games. Our current project is nova_res.</p>
           	</div>
         	</div>
 
         	<div class="col s12 m4">
           	<div class="icon-block">
-            	<h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
+            	<h2 class="center light-blue-text"><i class="material-icons medium">settings</i></h2>
             	<h5 class="center white-text">Libraries development</h5>
 
             	<p class="light white-text">
-								We create and provide libraries to make development more easier and fun! Why breaking your head on complicated code when you can simplify it?
-								We develop C++ and Java libraries like <a href="https://github.com/AperLambda/lambdacommon.git">&lambda;common</a>, <a href="https://github.com/AperLambda/ionicengine.git">IonicEngine</a>, <a href="https://github.com/AperLambda/kimiko.git">kimiko</a> and more!
+								We create and provide libraries to make developing more easier and fun! Why would you destroy your head with complicated code when you can simplify it?
+								We create C++ and Java libraries like <a href="https://github.com/AperLambda/lambdacommon.git">&lambda;common</a>, <a href="https://github.com/AperLambda/ionicengine.git">IonicEngine</a>, <a href="https://github.com/AperLambda/kimiko.git">kimiko</a> and more!
 							</p>
           	</div>
         	</div>
