:art: Improving the English and added more infos for the lambdacommon page.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<br />
 				<h1 class="header center blue-grey-text text-lighten-4 brand-title">AperLambda</h1>
 				<div class="row center">
-					<h5 class="header col s12 light white-text">A development team which is targetted to libraries and games.</h5>
+					<h5 class="header col s12 light white-text">A development team which makes libraries and video games.</h5>
 				</div>
 			</div>
 		</div>
@@ -76,7 +76,7 @@
             	<h2 class="center light-blue-text"><i class="material-icons medium">group</i></h2>
             	<h5 class="center white-text">Team</h5>
 
-            	<p class="light white-text">We're currently a very little team (like 2 people with only one person who works). If you want to join us, we will welcome you!</p>
+            	<p class="light white-text">We're currently a very little team (like 2 people with only one person working). If you want to join us, we will welcome you!</p>
           	</div>
         	</div>
 
@@ -95,8 +95,8 @@
             	<h5 class="center white-text">Libraries development</h5>
 
             	<p class="light white-text">
-								We create and provide libraries to make developing more easier and fun! Why would you destroy your head with complicated code when you can simplify it?
-								We create C++ and Java libraries like <a href="https://github.com/AperLambda/lambdacommon.git">&lambda;common</a>, <a href="https://github.com/AperLambda/ionicengine.git">IonicEngine</a>, <a href="https://github.com/AperLambda/kimiko.git">kimiko</a> and more!
+								We create and provide libraries to make developing more easier and fun! Why would you break your brain on complicated code when you can simplify it?
+								We create C++ and Java libraries like <a href="/libraries/lambdacommon">&lambda;common</a>, <a href="https://github.com/AperLambda/ionicengine.git">IonicEngine</a>, <a href="https://github.com/AperLambda/kimiko.git">kimiko</a> and more!
 							</p>
           	</div>
         	</div>
