--- a/libraries/lambdacommon/index.html
+++ b/libraries/lambdacommon/index.html
@@ -125,6 +125,38 @@
           </div>
         </div>
       </div>
+			<br />
+			<br />
+			<div class="section">
+				<!--   Links And Packaging Section   -->
+      	<div class="row">
+        	<div class="col s12 m6">
+          	<div class="icon-block">
+            	<h2 class="center light-blue-text"><i class="fas fa-code"></i></h2>
+            	<h5 class="center white-text">Source code</h5>
+
+            	<p class="light white-text">
+								What's the license of <span class="brand-title">&lambda;common</span>? It is MIT licensed.
+								<br />
+								Where can I find the code of <span class="brand-title">&lambda;common</span>? Well you can find it on <a href="https://github.com/AperLambda/lambdacommon.git">GitHub</a>!
+							</p>
+          	</div>
+        	</div>
+
+        	<div class="col s12 m6">
+          	<div class="icon-block">
+            	<h2 class="center light-blue-text"><i class="fas fa-cubes"></i></h2>
+            	<h5 class="center white-text">Packages</h5>
+
+							<p class="light white-text"><span class="brand-title">&lambda;common</span> is named <span class="brand-title">lambdacommon</span> in package repositories.</p>
+
+							<div class="center row">
+								<a href="https://repology.org/metapackage/lambdacommon/versions"><img src="https://repology.org/badge/vertical-allrepos/lambdacommon.svg" alt="Packaging status"></a>
+							</div>
+          	</div>
+        	</div>
+      	</div>
+			</div>
       <div class="section">
         <div class="row">
           <div class="col s12">
@@ -163,7 +195,7 @@ int main()
               <div class="col s12">
                 <h3 class="white-text">Windows</h3>
                 <p class="white-text">
-                  Download the latest zip file of the compiled binaries and the source code for Windows on <a href="https://github.com/AperLambda/lambdacommon/releases/latest">GitHub</a>.
+                  Download the latest ZIP file of, the compiled binaries and the headers for Windows on <a href="https://github.com/AperLambda/lambdacommon/releases/latest">GitHub</a>.
                 </p>
               </div>
             </div>
@@ -185,7 +217,7 @@ int main()
                 <h3 class="white-text">From source</h3>
                 <p class="white-text">
                   You will need to clone the repository of <span class="brand-title">&lambda;common</span>, then you'll build the sources with CMake and make (or MSBuild).
-                  <span class="brand-title">&lambda;common</span> will create a target named `install` and `uninstall` to simply install or uninstall the library.
+                  <span class="brand-title">&lambda;common</span> will create targets named `install` and `uninstall` to simply install or uninstall the library.
                 </p>
               </div>
             </div>
