--- a/libraries/lambdacommon/index.html
+++ b/libraries/lambdacommon/index.html
@@ -119,6 +119,7 @@
             <img src="https://img.shields.io/badge/language-C++-9B599A.svg?style=flat-square"></img>
             <a href="https://raw.githubusercontent.com/AperLambda/lambdacommon/master/LICENSE"><img src="https://img.shields.io/badge/license-MIT-blue.svg?style=flat-square"></img></a>
             <a href="https://github.com/AperLambda/lambdacommon/releases"><img src="https://img.shields.io/github/release/AperLambda/lambdacommon.svg?style=flat-square"></img></a>
+						<a href="https://www.codacy.com/app/LambdAurora/lambdacommon?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=AperLambda/lambdacommon&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/981c6234700d413297724d7d759e2dec"></img></a>
             <a href="https://travis-ci.org/AperLambda/lambdacommon/"><img src="https://travis-ci.org/AperLambda/lambdacommon.svg?branch=master"></img></a>
             <a href="https://ci.appveyor.com/project/LambdAurora/lambdacommon"><img src="https://ci.appveyor.com/api/projects/status/aufclhjsvecva6mk?svg=true"></img></a>
             <img src="https://img.shields.io/github/downloads/AperLambda/lambdacommon/latest/total.svg?style=flat-square"></img>
