:art: Fixed the all caps Mac OSX in λcommon page.

--- a/libraries/lambdacommon/index.html
+++ b/libraries/lambdacommon/index.html
@@ -204,7 +204,7 @@ int main()
             </div>
 						<div class="row">
               <div class="col s12">
-                <h3 class="white-text">MAC OSX</h3>
+                <h3 class="white-text">Mac OSX</h3>
                 <p class="white-text">
                   Please install from the sources.
                 </p>
