--- a/index.html
+++ b/index.html
@@ -21,13 +21,9 @@
 	<body class="blue-grey darken-4">
 		<header>
 			<ul id="libraries_dropdown" class="dropdown-content">
-				<li><span>C++</span></li>
-				<li class="divider"></li>
+				<li><span>Libraries:</span></li>
 				<li><a href="/libraries/lambdacommon">&lambda;common</a></li>
 				<li><a href="/libraries/ionicengine">IonicEngine</a></li>
-				<li class="divider"></li>
-				<li><span>Java</span></li>
-				<li class="divider"></li>
 				<li><a href="/libraries/kimiko">kimiko</a></li>
 			</ul>
 
@@ -46,12 +42,8 @@
 
 		  <ul class="sidenav" id="mobile-head-navbar">
 				<li><span style="margin-left: 2px;">Libraries</span></li>
-				<li><span style="margin-left: 8px;">C++</span></li>
-				<li class="divider"></li>
 				<li><a href="/libraries/lambdacommon">&lambda;common</a></li>
 				<li><a href="/libraries/ionicengine">IonicEngine</a></li>
-				<li><span style="margin-left: 8px;">Java</span></li>
-				<li class="divider"></li>
 				<li><a href="/libraries/kimiko">kimiko</a></li>
 		  </ul>
 		</header>
@@ -105,6 +97,7 @@
 			<br />
 			<br />
 		</div>
+		
 		<footer class="page-footer blue-grey darken-2">
 			<div class="container">
 				<div class="row">
