--- a/libraries/lambdacommon/index.html
+++ b/libraries/lambdacommon/index.html
@@ -31,7 +31,7 @@
 		  <nav class="blue-grey darken-3">
 				<div class="nav-wrapper">
 					<div class="brand-logo" style="display: flex; align-items: center;">
-						<img class="circle responsive-img" style="max-height: 64px !important; max-width: 32px; padding: 15px 0 !important; margin-left: 5px;" src="../../aperlambda.png" />
+						<img class="circle responsive-img" style="max-height: 64px !important; max-width: 32px; padding: 15px 0 !important; margin-left: 7px; margin-right: 2px;" src="../../aperlambda.png" />
 						<a href="../.." class="brand-title" style="margin-left: 5px;">AperLambda</a>
 					</div>
 		    	<a href="#" data-target="mobile-head-navbar" class="sidenav-trigger"><i class="material-icons">menu</i></a>
