:art: Updated color theme.

--- a/libraries/kimiko/index.html
+++ b/libraries/kimiko/index.html
@@ -12,6 +12,7 @@
     <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"  media="screen,projection" />
     <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.15.0/themes/prism-okaidia.min.css" />
 		<link type="text/css" rel="stylesheet" href="../../aperlambda.css" />
+    <link type="text/css" rel="stylesheet" href="../../css/lambdacolors_dark.css" />
 		<link type="text/css" rel="stylesheet" href="../../css/aperlambda_social_media.css" />
 
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
@@ -19,7 +20,7 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	</head>
-	<body class="blue-grey darken-4">
+	<body class="lambdacolors_background">
 		<header>
 			<ul id="libraries_dropdown" class="dropdown-content">
 				<li><span>Libraries:</span></li>
@@ -28,7 +29,7 @@
 				<li><a href="#">kimiko</a></li>
 			</ul>
 
-		  <nav class="blue-grey darken-3">
+		  <nav class="lambdacolors_appbar">
 				<div class="nav-wrapper">
 					<div class="brand-logo" style="display: flex; align-items: center;">
 						<img class="circle responsive-img" style="max-height: 64px !important; max-width: 32px; padding: 15px 0 !important; margin-left: 7px; margin-right: 2px;" src="../../aperlambda.png" />
@@ -105,7 +106,7 @@
       </div>
     </div>
 
-    <ul class="tabs tabs-fixed-width z-depth-1 blue-grey darken-3">
+    <ul class="tabs tabs-fixed-width z-depth-1 lambdacolors_appbar">
       <li class="tab"><a href="#kimiko_java">Java</a></li>
       <li class="tab"><a class="active" href="#kimiko_js">JavaScript</a></li>
       <li class="tab disabled"><a href="#kimikopp">C++</a></li>
@@ -146,7 +147,7 @@
 
 							<p class="light white-text"><span class="brand-title">kimiko</span> is in the AperLambda Maven repository.</p>
 
-              <ul class="tabs tabs-fixed-width z-depth-1 blue-grey darken-3">
+              <ul class="tabs tabs-fixed-width z-depth-1 lambdacolors_appbar">
                 <li class="tab"><a href="#kimiko_java_maven">Maven</a></li>
                 <li class="tab"><a class="active" href="#kimiko_java_gradle">Gradle</a></li>
               </ul>
@@ -221,7 +222,7 @@
     </div>
     <div id="kimikopp" class="col s12"><p class="center white-text">WIP</p></div>
 
-    <footer class="page-footer blue-grey darken-2">
+    <footer class="page-footer lambdacolors_appbar">
 			<div class="container">
 				<div class="row">
 					<div class="col l6 s12">
