--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"  media="screen,projection" />
 		<link type="text/css" rel="stylesheet" href="aperlambda.css" />
+		<link type="text/css" rel="stylesheet" href="css/lambdacolors_dark.css" />
 		<link type="text/css" rel="stylesheet" href="css/aperlambda_social_media.css" />
 
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
@@ -18,7 +19,7 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	</head>
-	<body class="blue-grey darken-4">
+	<body class="lambdacolors_background">
 		<header>
 			<ul id="libraries_dropdown" class="dropdown-content">
 				<li><span>Libraries:</span></li>
@@ -27,7 +28,7 @@
 				<li><a href="/libraries/kimiko">kimiko</a></li>
 			</ul>
 
-		  <nav class="blue-grey darken-3">
+		  <nav class="lambdacolors_appbar">
 				<div class="nav-wrapper">
 					<div class="brand-logo" style="display: flex;align-items:center;">
 						<img class="circle responsive-img" style="max-height: 64px !important; max-width: 32px; padding: 15px 0 !important; margin-left: 7px; margin-right: 2px;" src="aperlambda.png" />
@@ -88,7 +89,7 @@
 
             	<p class="light white-text">
 								We create and provide libraries to make developing more easier and fun! Why would you break your brain on complicated code when you can simplify it?
-								We create C++ and Java libraries like <a href="/libraries/lambdacommon">&lambda;common</a>, <a href="https://github.com/AperLambda/ionicengine.git">IonicEngine</a>, <a href="https://github.com/AperLambda/kimiko.git">kimiko</a> and more!
+								We create C++, JavaScript and Java libraries like <a href="/libraries/lambdacommon">&lambda;common</a>, <a href="https://github.com/AperLambda/ionicengine.git">IonicEngine</a>, <a href="/libraries/kimiko">kimiko</a> and more!
 							</p>
           	</div>
         	</div>
@@ -98,7 +99,7 @@
 			<br />
 		</div>
 
-		<footer class="page-footer blue-grey darken-2">
+		<footer class="page-footer lambdacolors_appbar">
 			<div class="container">
 				<div class="row">
 					<div class="col l6 s12">
