--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
 		<!--Let browser know website is optimized for mobile-->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	</head>
-	<body class="blue-grey darken-4">
+	<body class="lambdacolors_background">
 		<header>
 			<ul id="libraries_dropdown" class="dropdown-content">
 				<li><span>Libraries:</span></li>
@@ -28,11 +28,11 @@
 				<li><a href="/libraries/kimiko">kimiko</a></li>
 			</ul>
 
-		  <nav class="blue-grey darken-3">
+		  <nav class="lambdacolors_appbar">
 				<div class="nav-wrapper">
 					<div class="brand-logo" style="display: flex;align-items:center;">
 						<img class="circle responsive-img" style="max-height: 64px !important; max-width: 32px; padding: 15px 0 !important; margin-left: 7px; margin-right: 2px;" src="/aperlambda.png" />
-						<a href="#!" class="brand-title" style="margin-left: 5px;">AperLambda</a>
+						<a href="/" class="brand-title" style="margin-left: 5px;">AperLambda</a>
 					</div>
 		    	<a href="#" data-target="mobile-head-navbar" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 		    	<ul class="right hide-on-med-and-down">
@@ -41,11 +41,11 @@
 				</div>
 		  </nav>
 
-		  <ul class="sidenav" id="mobile-head-navbar">
+		  <ul class="sidenav lambdacolors_appbar white-text" id="mobile-head-navbar">
 				<li><span style="margin-left: 2px;">Libraries</span></li>
-				<li><a href="/libraries/lambdacommon">&lambda;common</a></li>
-				<li><a href="/libraries/ionicengine">IonicEngine</a></li>
-				<li><a href="/libraries/kimiko">kimiko</a></li>
+				<li><a href="/libraries/lambdacommon" class="white-text">&lambda;common</a></li>
+				<li><a href="/libraries/ionicengine" class="white-text">IonicEngine</a></li>
+				<li><a href="/libraries/kimiko" class="white-text">kimiko</a></li>
 		  </ul>
 		</header>
 
@@ -85,7 +85,7 @@
 			<br />
 		</div>
 
-		<footer class="page-footer blue-grey darken-2">
+		<footer class="page-footer lambdacolors_appbar">
 			<div class="container">
 				<div class="row">
 					<div class="col l6 s12">
