--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 				</div>
 		  </nav>
 
-		  <ul class="sidenav" id="mobile-head-navbar">
+		  <ul class="sidenav lambdacolors_appbar white-text" id="mobile-head-navbar">
 				<li><span style="margin-left: 2px;">Libraries</span></li>
-				<li><a href="/libraries/lambdacommon">&lambda;common</a></li>
-				<li><a href="/libraries/ionicengine">IonicEngine</a></li>
-				<li><a href="/libraries/kimiko">kimiko</a></li>
+				<li><a href="/libraries/lambdacommon" class="white-text">&lambda;common</a></li>
+				<li><a href="/libraries/ionicengine" class="white-text">IonicEngine</a></li>
+				<li><a href="/libraries/kimiko" class="white-text">kimiko</a></li>
 		  </ul>
 		</header>
 
