--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
 		<!--Import materialize.css-->
 		<link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"  media="screen,projection" />
 		<link type="text/css" rel="stylesheet" href="/aperlambda.css" />
-		<link type="text/css" rel="stylesheet" href="/css/lambdacolors_background.css" />
+		<link type="text/css" rel="stylesheet" href="/css/lambdacolors_dark.css" />
 		<link type="text/css" rel="stylesheet" href="/css/aperlambda_social_media.css" />
 
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
