:art: Added sidenav color.

--- a/libraries/lambdacommon/index.html
+++ b/libraries/lambdacommon/index.html
@@ -42,7 +42,7 @@
 				</div>
 		  </nav>
 
-			<ul class="sidenav lambdacolors_appbar white-text" id="mobile-head-navbar">
+			<ul class="sidenav lambdacolors_sidenav white-text" id="mobile-head-navbar">
 				<li><span style="margin-left: 2px;">Libraries</span></li>
 				<li><a href="#" class="white-text">&lambda;common</a></li>
 				<li><a href="/libraries/ionicengine" class="white-text">IonicEngine</a></li>
